[package]
name = "fly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
anyhow = { version = "1" }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
env_logger = "0.10.0"
log = "0.4.20"
